gcc/testsuite/algol68/compile/error-radix-3.a68
(bits c = 8rab, skip) { dg-error "" }
